--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx webpack --mode production",
     "test": "npx jest",
-    "lint": "npx eslint --ext .js,.jsx,.ts,.tsx --fix src/"
+    "lint": "npx eslint --ext .js,.jsx,.ts,.tsx --fix src/",
+    "calc": "npx ts-node src/"
   },
   "author": "aimenin",
   "license": "ISC",
@@ -26,6 +27,7 @@
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "ts-node": "^10.0.0",
+    "typescript": "^4.3.5",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
